--- a/jogos/hinosMunicipais/hinos.css
+++ b/jogos/hinosMunicipais/hinos.css
@@ -1,46 +1,84 @@
-body {
-    overflow: hidden;
-    margin: 0;
-    background-color: black;
+@media (min-width: 900px) {
+    body {
+        overflow: hidden;
+        margin: 0;
+        background-color: black;
+    }
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height:80%;
+        width:100%;
+        border: 0;
+      }
+      .button_showhide {
+        position: relative;
+        background-color: white;
+        color: black;
+        font-size: 250%;
+        text-align: center;
+        font-family: 'Courier New', Courier, monospace;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 49%;
+      }
 }
-
-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height:80%;
-  width:100%;
-  border: 0;
+@media (max-width: 899px) {
+    body {
+        overflow: hidden;
+        margin: 0;
+        background-color: black;
+    }
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height:80%;
+        width:80%;
+        border: 0;
+      }
+      .button_showhide {
+        position: relative;
+        background-color: white;
+        color: black;
+        font-size: 250%;
+        text-align: center;
+        font-family: 'Courier New', Courier, monospace;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 80%;
+      }
 }
-.button_showhide {
-  position: relative;
-  background-color: white;
-  color: black;
-  font-size: 250%;
-  text-align: center;
-  font-family: 'Courier New', Courier, monospace;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 49%;
+@media only screen and (hover: none) and (pointer: coarse) {
+    body {
+        overflow: hidden;
+        margin: 0;
+        background-color: black;
+    }
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height:80%;
+        width:80%;
+        border: 0;
+      }
+      .button_showhide {
+        position: relative;
+        background-color: white;
+        color: black;
+        font-size: 300%;
+        text-align: center;
+        font-family: 'Courier New', Courier, monospace;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 49%;
+      }
 }
-  body {
-  background-color: black;
-  text-align: center;
-  font-family: 'Courier New', Courier, monospace;
-  margin: 1%;
-  margin-left: 5%;
-  margin-right: 5%;}
-  img {
-      border-color: white;
-      border: 2px solid white;
-      max-height: 50%;
-      max-width: 50%;
-      margin-left: auto;
-      margin-right: auto;
-  }
-  h2 {
-      color: white;
-      font-size: 210%;
-  }
